<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="miles_to_kilometers_converter">Miles to Kilometers Converter</string>
    <string name="fahrenheit_to_celsius_converter">Fahrenheit to Celsius Converter</string>
    <string name="button">Button</string>
    <string name="total_bill">Total Bill</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="number_of_people">Number of People</string>
    <string name="calculate">Calculate</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="convert">Convert</string>
</resources>
