<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MilesToKilometersConverter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/milesField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/miles"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <EditText
            android:id="@+id/kilometersField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/kilometers"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="convertPressed"
            android:text="@string/convert" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>